<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="2048"
            android:textSize="72sp" />

        <Button
            android:id="@+id/btn_login_4"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btnlogin_4"
            android:gravity="center"
            android:text="@string/newgame_4"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_login_5"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_login_4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btnlogin_5"
            android:gravity="center"
            android:text="@string/newgame_5"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_login_6"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_login_5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btnlogin_6"
            android:gravity="center"
            android:text="@string/newgame_6"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_login_7"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_login_6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btnlogin_7"
            android:gravity="center"
            android:text="@string/newgame_7"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_login_8"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_login_7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btnlogin_8"
            android:gravity="center"
            android:text="@string/newgame_8"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_login_gameset"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_login_8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btnlogin_mute"
            android:gravity="center"
            android:text="@string/muteoff"
            android:textColor="@android:color/background_light" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>